feat: 实体类转为查询接口